image16dir = $(PIDGIN_DATADIR)/share/pixmaps/pidgin/protocols/16
image22dir = $(PIDGIN_DATADIR)/share/pixmaps/pidgin/protocols/22
image48dir = $(PIDGIN_DATADIR)/share/pixmaps/pidgin/protocols/48

image16_DATA = prpltwtr16.png
image22_DATA = prpltwtr22.png
image48_DATA = prpltwtr48.png

EXTRA_DIST = \
Makefile.mingw \
im-twitter.png \
twitter.manager \
twitter.profile \
$(image16_DATA) \
$(image22_DATA) \
$(image48_DATA) 

